--- a/.github/workflows/bot_runner.yml
+++ b/.github/workflows/bot_runner.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install "python-telegram-bot[job-queue]" httpx
+          pip install requests "python-telegram-bot[job-queue]" httpx
 
       - name: Run Telegram Bot
         env:
